fix padding issue with post_info, add break instead

--- a/css/default.css
+++ b/css/default.css
@@ -971,8 +971,6 @@
 		font-size: .8em;
 		text-align: center;
 		font-family: mate, serif;
-        padding-left: 10%;
-        padding-right: 10%;
 	}
 
 	.post_info span
